--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <h1>Angel Gonzalez | WDD 130</h1>
     <img src="images/profile.png" alt="An image of Angel Gonzalez" width="200">
     <p>Hello, My name is Angel Gonzalez. I am from chicago Illinois. I enjoy working on 
-        creative activities such as illustration, music production and gaming.
+        creative activities such as illustration, music production and gaming. I enjoy 
+        the feeling of understanding a new coding concept and using that informations 
+        to create my own projects.
     </p>
 </main>
 <footer>
