changes for week 02 assignment done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="styles/styles.css">
 <title>Angel Gonzalez | WDD 130</title>
+<meta name="Info page of angel" content="Page contains info about angel and an image.">
+<meta name="Angel Gonzalez" content="Angel">
 </head>
 <body>
 <header>
@@ -21,6 +23,15 @@
         creative activities such as illustration, music production and gaming. I enjoy 
         the feeling of understanding a new coding concept and using that informations 
         to create my own projects.
+    </p>
+    <h2>
+        Chicago Illinois
+    </h2>
+    <img src="images/bean.png" alt="angel infron of cloud gate">
+    <p>
+        Chicago is one of the third largest city in the united state with LA and New York ahead of it. There 
+        is a lot of pride being from Chicago and behind me is the famous bean in Millennium Park but the real
+        name for it is "cloud gate", given by the artist behind the design.
     </p>
 </main>
 <footer>
